<resources>
    <string name="app_name">AmaWeatherApp</string>
    <string name="button_1">Wybierz po ID z bazy danych IMGW</string>
    <string name="button_2">Wybierz po ID z bazy danych AirLy</string>
    <string name="button_3">Wyszukaj na mapie</string>
    <string name="button_4">Wpisz nazwę miasta</string>
    <string name="button_5">Wpisz nazwę miasta (dane hydrologiczne)</string>
    <string name="wpiszLogin">Wpisz login do AirLy</string>
    <string name="wpiszHaslo">Wpisz hasło do AirLy</string>
    <string name="zapamietajHaslo">Zapamiętaj hasło</string>
    <string name="options">Opcje</string>
    <string name="option1">Opcja1</string>
    <string name="aktualizuj">Aktualizuj!</string>
    <string name="wpisz_nazw_miasta_bez_polskich_znak_w">Wpisz nazwę miasta (bez polskich znaków)</string>
    <string name="przejd_dalej">Przejdź dalej</string>
</resources>
